# PowerTuneDigital_Prism

./: .clang-format  .clangd  CMakeLists.txt  dashboard.cpp  dashboard.h  main.cpp  udpreceiver.cpp
Core/: appsettings.cpp  appsettings.h  connect.cpp  connect.h  dashboard.cpp  dashboard.h  serialport.cpp  serialport.h
Core/Models/: AnalogInputs.cpp  AnalogInputs.h  DataModels.h  DigitalInputs.cpp  DigitalInputs.h  ElectricMotorData.cpp  ElectricMotorData.h  EngineData.cpp  EngineData.h  ExpanderBoardData.cpp  ExpanderBoardData.h  FlagsData.cpp  FlagsData.h  GPSData.cpp  GPSData.h  TimingData.cpp  TimingData.h  VehicleData.cpp  VehicleData.h
ECU/: AdaptronicSelect.cpp  AdaptronicSelect.h  Apexi.cpp  Apexi.h  arduino.cpp  arduino.h  obd.cpp  obd.h
GPSTracks/: Laptimer.qml
Gauges/: BarGauge.qml  Camera.qml  Cluster.qml  Dashboard.qml  DashboardGaugeStyle.qml  DatasourcesList.qml  HaltechFlags.qml  Keypad.qml  Mediaplayer.qml  MyTextLabel.qml  NormalGaugeStyle.qml  PFCSensors.qml  Picture.qml  RPMBARStyle2.qml  RPMBarStyle1.qml  RPMbar.qml  RPMbarStyle3.qml  RoundGauge.qml  SensorTest.qml  SpeedMeasurements.qml  SportDash.qml  SquareGaugeMain.qml  Squaregauge.qml  SquaregaugeRaceDash.qml  StateGIF.qml  Statepicture.qml  TachometerStyle.qml  Userdash1.qml  Userdash2.qml  Userdash3.qml  Verticalbargauge.qml
Hardware/: Extender.cpp  Extender.h  gopro.cpp  gopro.h  gps.cpp  gps.h  sensors.cpp  sensors.h
QML/: AnalogInputs.qml  BrightnessPopUp.qml  ConsultRegs.qml  ExBoardAnalog.qml  OBDPIDS.qml
Settings/: DashSelector.qml  help.qml  main.qml  network.qml  rpm.qml  sensehat.qml  speed.qml  startup.qml  warn_gear.qml
Utils/: Calculations.cpp  Calculations.h  DataLogger.cpp  DataLogger.h  ParseGithubData.cpp  ParseGithubData.h  Speedo.h  UDPReceiver.cpp  UDPReceiver.h  downloadmanager.cpp  downloadmanager.h  iomapdata.cpp  iomapdata.h  shcalc.cpp  shcalc.h  textprogressbar.cpp  textprogressbar.h  wifiscanner.cpp  wifiscanner.h
daemons/: EMUCANd
